--- a/src/styles.css
+++ b/src/styles.css
@@ -4,6 +4,10 @@
     display: block;
 }
 
+.status {
+    margin-bottom: 10px;
+}
+
 .square {
     background-color: #FFF;
     border: 1px solid #999;
