dissemble functionality of board and then pass Board status info from game to board component by adding attribute

--- a/src/styles.css
+++ b/src/styles.css
@@ -19,3 +19,15 @@
     margin-bottom: -1px;
     text-align: center;
 }
+
+.game {
+    display: flex;
+}
+
+.game-board {
+    width: 200px;
+}
+
+.game-history {
+    flex: 1;
+}
