--- a/src/styles.css
+++ b/src/styles.css
@@ -31,3 +31,25 @@
 .game-history {
     flex: 1;
 }
+
+.history-title {
+    margin: 0;
+    font-weight: normal;
+    font-size: 16px;
+}
+
+.history-list {
+    margin: 0;
+    padding: 0;
+}
+
+.history-item {
+    margin-top: 5px;
+    font-size: 12px;
+}
+
+.history-size {
+    margin-top: 5px;
+    font-size: 12px;
+    cursor: pointer;
+}
